  * This bug was introduced in v0.13.2.AP (Commit 8705fdb)
- Improves `HandleSignedInt` Function
  * Ensures the function always returns a negative value when required
- Improves `FindMenuShortcutEntry` Function
  * Now initially tries a exact match of the stored string against available entries
  * A match against substrings is only tried if an exact match is not found
- Amends CSR Operation Coverage
  * Extends limitation of misc SIP/CSR items to Apple firmware pending review of applicability
- Amends Pointer Token Priority
  * The `enable_mouse` setting now always takes precedence over the `enable_touch` setting
  * Changes inherited upstream implementation based on order of appearance in the config file


0.13.2.AP (19 Apr 2022):
-----------------------
- Adds `PanicFilter` Feature
  * RefindPlus now discards NVRAM write attempts of kernel panic information by default
  * Can be disabled using a new `decline_panicfilter` configuration token
  * Currently limited to when directly booting MacOS from RefindPlus
- Adds `SupplyAppleFB` Feature
  * Attempts to provide AppleFramebuffers on Macs when absent under certain circumstances
  * Can be disabled using a new `decline_applefb` configuration token
- Adds `TextHelp` Feature
  * Uses complementary text colours to improve legibility
  * Can be disabled using a new `decline_texthelp` configuration token
    - Only when using a custom title banner
    - Always on when using the default title banner
- Adds `IconRowMove` Feature
  * Allows repositioning the icon row position on the RefindPlus screen
    - Sometimes needed when icons block parts of custom banners
  * Base position can be specified using a new `icon_row_move` configuration token
- Adds `IconRowTune` Feature
  * Allows adjustments to the `IconRowMove` position
  * Offset value can be specified using a new `icon_row_tune` configuration token
- Adds `RansomDrives` Feature
  * Some types of firmware, notably on HP Notebooks, may lock some partitions