@@ -18,6 +18,15 @@
 - Improves `FindMenuShortcutEntry` Function
   * Now initially tries a exact match of the stored string against available entries
   * A match against substrings is only tried if an exact match is not found
+- Improves `SupplyUEFI` Feature
+  * The `QueryVariableInfo` Runtime service is now also emulated
+  * Avoid crashes from unavailability if called on emulated UEFI 2.x
+  * The UEFI 2.x emulation now returns an `EFI_UNSUPPORTED` error instead
+- Improves Pointer Device Handling
+  * Applies workaround for touch mode failure
+    - Ref: https://sf.net/p/refind/discussion/general/thread/86f80fa8ef
+  * Retionalises pointer priority with `EnableTouch` always having priority over `EnableMouse`
+    - Previously depended on order of appearance in configuration file
 - Amends CSR Operation Coverage
   * Extends limitation of misc SIP/CSR items to Apple firmware pending review of applicability
 - Amends Pointer Token Priority
